add basic info to thesis template

--- a/thesis/mobile-object-detection.tex
+++ b/thesis/mobile-object-detection.tex
@@ -23,19 +23,17 @@
 % set title, authors and stuff for the cover
 % docytype needs xspace because it is used within text.
 \def\doctype{Bachelor's Thesis\xspace}
-%\def\doctype{Master's Thesis\xspace}
-%\def\doctype{Guided Research\xspace}
-%\def\doctype{Interdisciplinary Project\xspace}
+
 \def\studyProgram{Informatics}
-\def\title{A very cool Title}
-% don't try translate every technical term if it would sound off
-\def\titleGer{Ein sehr cooler Titel}
-\def\author{Your Name}
+\def\title{Implementing a mobile app for object detection}
+
+\def\titleGer{Entwicklung einer mobilen App zur Objekterkennung}
+\def\author{David Drews}
 % Prof
 \def\supervisor{Univ.-Prof. Dr. Hans-Joachim Bungartz}
 % PhD Candidate
-\def\advisor{Fabio Alexander Gratl, M.Sc.}
-\def\date{Date of Submission}
+\def\advisor{Severin Reiz, M.Sc.}
+\def\date{15th of August 2021}
 
 \begin{document}
 \frontmatter
@@ -50,8 +48,8 @@
 \vspace{4cm}
 \begin{center}
     \includegraphics[width=4cm]{templateStuff/tumlogo.pdf}\\[5mm]
-    \huge FAKULTÄT FÜR INFORMATIK\\[5mm]
-    \large DER TECHNISCHEN UNIVERSITÄT MÜNCHEN\\[24mm]
+    \huge DEPARTMENT OF INFORMATICS\\[5mm]
+    \large TECHNICAL UNIVERSITY OF MUNICH\\[24mm]
 
     {\Large \doctype in \studyProgram}\\[20mm]
     {\huge\bf \title\par}
@@ -76,8 +74,8 @@
 \vspace{10mm}
 \begin{center}
     \includegraphics[width=4cm]{templateStuff/tumlogo.pdf}\\[5mm]
-	\huge FAKULTÄT FÜR INFORMATIK\\[5mm]
-	\large DER TECHNISCHEN UNIVERSITÄT MÜNCHEN\\[24mm]
+	\huge DEPARTMENT OF INFORMATICS\\[5mm]
+	\large TECHNICAL UNIVERSITY OF MUNICH\\[24mm]
 	{\Large \doctype in \studyProgram}\\[20mm]
 	{\LARGE\bf \title}\\[10mm]
 	{\LARGE\bf \titleGer}\\[10mm]
