--- a/TUM_Lens/app/src/main/res/values/strings.xml
+++ b/TUM_Lens/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="settings">Settings</string>
     <string name="exit">Exit</string>
     <string name="this_will_only">This will only work if you grant the permission to use your camera and access your gallery.</string>
-    <string name="this_app_feeds">This app feeds your cameras\' view finder input to a TensorFlow model, that tries to classify the object you point your phone at.</string>
+    <string name="this_app_feeds">This app feeds your cameras\' input to a TensorFlow model that tries to classify the objects you point your phone at.</string>
     <string name="hi_there">Hi there!</string>
     <string name="per_frame_classification_results">Per frame classification results</string>
     <string name="not_available">not available</string>
