Add bottom sheet and toggle button to detection activity
fixme: toggle button in detection activity is not yet working as expected

--- a/TUM_Lens/app/src/main/res/values/strings.xml
+++ b/TUM_Lens/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="per_frame_classification_results">Per frame classification results</string>
     <string name="not_available">not available</string>
     <string name="suggestions">Suggestions</string>
+    <string name="specs">Specifications</string>
     <string name="version">Version 0.1</string>
     <string name="other_settings">Other settings</string>
     <string name="model">Model</string>
