Change structure of thesis to make it more coherent

--- a/thesis/mobile-object-detection.tex
+++ b/thesis/mobile-object-detection.tex
@@ -84,7 +84,7 @@
 		\Large Author:      	& \Large \author \\[2mm]
 		\Large Supervisor:  	& \Large \supervisor\\[2mm]
 		\Large Advisor:			& \Large \advisor\\[2mm]
-		\Large Date:       		& \Large \date
+		\Large Submission Date:       		& \Large \date
 	\end{tabular}
 	\vspace{-1mm}
 	\begin{figure}[h!]
@@ -165,15 +165,13 @@ Munich, \date \hspace{5cm} \author
 % -------------------------------------------------------------------------------
 
 \mainmatter
-\part{Introduction and Background}
+\chapter{Introduction}
 
-\chapter{Motivation}
-
-\section{Growing Support for Machine Learning Applications Running On-Device}
+\section{Growing Support for Running Machine Learning Operations on Mobile Devices}
 
 \section{Privacy Implications of On-Device Machine Learning}
 
-\chapter{Computer Vision}
+\chapter{Background Theory in Computer Vision}
 
 \section{History of Computer Vision}
 
@@ -190,32 +188,32 @@ Munich, \date \hspace{5cm} \author
 \section{Object Detection}
 \section{Theory Fun}
 
-\part{App Development}
+\chapter{App Development}
 
-\chapter{Previous State of the Application}
+\section{Previous State of the Application}
 
-\section{Use Cases}
+\subsection{Use Cases}
 
-\section{Notable Design Decisions}
+\subsection{Notable Design Decisions}
 
-\chapter{Development Goals}
+\section{Development Goals}
 
-\section{Migration From Java to Kotlin}
+\subsection{Migration From Java to Kotlin}
 
-\section{New Functionality: Object Detection}
+\subsection{New Functionality: Object Detection}
 
-\chapter{Implementing Object Detection Based on the TensorFlow Lite Framework}
+\section{Implementing Object Detection Based on the TensorFlow Lite Framework}
 
-\section{Some Deep}
-\section{Dive Into}
-\section{Object Detection}
-\section{Implementation Fun}
+\subsection{Some Deep}
+\subsection{Dive Into}
+\subsection{Object Detection}
+\subsection{Implementation Fun}
 
 % Potential Contets: Design and architecture choices, reused patterns from exisiting application, improvements to exisiting code
 
-\part{Results}
+\chapter{Results}
 
-\section{Performance of Current State of the Art Object Detection Networks on Mobile Devices}
+\section{Performance of Object Detection Algorithms on Mobile Devices}
 
 \section{Future Work} % Can also be named "Outlook" depending on the contents of this section
 
@@ -224,7 +222,6 @@ Munich, \date \hspace{5cm} \author
 % -------------------------------------------------------------------------------
 
 \appendix
-\part{Appendix}
 
 \chapter{Screenshots of the Application}
 
