--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -1,14 +1,53 @@
 Comments can be made just like this
 Best thesis ever:
 @mastersthesis{gratl17task,
-    address = {Garching},
-    author = {Gratl, Fabio Alexander},
-    institution = {Institut für Informatik 5, Technische Universität München},
-    month = nov,
-    organization = {Institut für Informatik 5, Technische Universität München},
-    school = {Institut für Informatik 5, Technische Universität München},
-    title = {Task Based Parallelization of the Fast Multipole Method implementation of ls1-mardyn via QuickSched},
-    type = {Master's thesis},
-    year = {2017},
-    URL = {https://www5.in.tum.de/pub/Gratl_MA_TaskBasedFMM.pdf}
+	address = {Garching},
+	author = {Gratl, Fabio Alexander},
+	institution = {Institut für Informatik 5, Technische Universität München},
+	month = nov,
+	organization = {Institut für Informatik 5, Technische Universität München},
+	school = {Institut für Informatik 5, Technische Universität München},
+	title = {Task Based Parallelization of the Fast Multipole Method implementation of ls1-mardyn via QuickSched},
+	type = {Master's thesis},
+	year = {2017},
+	URL = {https://www5.in.tum.de/pub/Gratl_MA_TaskBasedFMM.pdf}
+}
+@web_page{nnapi_devguide_2021,
+   author = {Android Developers},
+   journal = {Android Developers NDK Guides},
+   title = {Neural Networks API},
+   url = {https://developer.android.com/ndk/guides/neuralnetworks},
+   year = {2021}
+}
+@web_page{dl_ranking_2018,
+   author = {Jeff Hale},
+   journal = {Towards Data Science},
+   month = {9},
+   title = {Deep Learning Framework Power Scores 2018},
+   url = {https://towardsdatascience.com/deep-learning-framework-power-scores-2018-23607ddf297a},
+   year = {2018},
+}
+@web_page{pytorch_release_2019,
+   author = {Team PyTorch},
+   journal = {PyTorch Blog},
+   month = {10},
+   title = {PyTorch 1.3 adds mobile, privacy, quantization, and named tensors},
+   url = {https://pytorch.org/blog/pytorch-1-dot-3-adds-mobile-privacy-quantization-and-named-tensors/},
+   year = {2019},
+}
+@web_page{neural_engine_verge_2017,
+   author = {James Vincent},
+   journal = {The Verge},
+   month = {9},
+   title = {The iPhone X’s new neural engine exemplifies Apple’s approach to AI},
+   url = {https://www.theverge.com/2017/9/13/16300464/apple-iphone-x-ai-neural-engine},
+   year = {2017},
+}
+@web_page{tflite_release_verge_2017,
+   author = {James Vincent},
+   journal = {The Verge},
+   month = {5},
+   title = {Google’s new machine learning framework is going to put more AI on your phone},
+   url = {https://www.theverge.com/2017/5/17/15645908/google-ai-tensorflowlite-machine-learning-announcement-io-2017},
+   year = {2017},
 }
