--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -12,42 +12,54 @@ Best thesis ever:
 	year = {2017},
 	URL = {https://www5.in.tum.de/pub/Gratl_MA_TaskBasedFMM.pdf}
 }
-@web_page{nnapi_devguide_2021,
+@online{nnapi_devguide_2021,
    author = {Android Developers},
    journal = {Android Developers NDK Guides},
-   title = {Neural Networks API},
+   title = {{Neural Networks API}},
+   urldate = {2021-07-31},
    url = {https://developer.android.com/ndk/guides/neuralnetworks},
-   year = {2021}
+   year = {2021},
 }
-@web_page{dl_ranking_2018,
+@online{dl_ranking_2018,
    author = {Jeff Hale},
    journal = {Towards Data Science},
    month = {9},
-   title = {Deep Learning Framework Power Scores 2018},
+   title = {{Deep Learning Framework Power Scores 2018}},
    url = {https://towardsdatascience.com/deep-learning-framework-power-scores-2018-23607ddf297a},
+   urldate = {2021-07-31},
    year = {2018},
 }
-@web_page{pytorch_release_2019,
+@online{pytorch_release_2019,
    author = {Team PyTorch},
    journal = {PyTorch Blog},
    month = {10},
-   title = {PyTorch 1.3 adds mobile, privacy, quantization, and named tensors},
+   title = {{PyTorch 1.3 adds mobile, privacy, quantization, and named tensors}},
    url = {https://pytorch.org/blog/pytorch-1-dot-3-adds-mobile-privacy-quantization-and-named-tensors/},
+   urldate = {2021-07-31},
    year = {2019},
 }
-@web_page{neural_engine_verge_2017,
+@online{neural_engine_verge_2017,
    author = {James Vincent},
    journal = {The Verge},
    month = {9},
-   title = {The iPhone X’s new neural engine exemplifies Apple’s approach to AI},
+   title = {{The iPhone X’s new neural engine exemplifies Apple’s approach to AI}},
    url = {https://www.theverge.com/2017/9/13/16300464/apple-iphone-x-ai-neural-engine},
+   urldate = {2021-07-31},
    year = {2017},
 }
-@web_page{tflite_release_verge_2017,
+@online{tflite_release_verge_2017,
    author = {James Vincent},
    journal = {The Verge},
    month = {5},
-   title = {Google’s new machine learning framework is going to put more AI on your phone},
+   title = {{Google’s new machine learning framework is going to put more AI on your phone}},
    url = {https://www.theverge.com/2017/5/17/15645908/google-ai-tensorflowlite-machine-learning-announcement-io-2017},
+   urldate = {2021-07-31},
    year = {2017},
+}
+@online{azn_local,
+	journal = {Amazon.com Help & Customer Service},
+	title = {{Use Local Voice Control with Offline Echo Devices}},
+	url = {https://www.amazon.com/gp/help/customer/display.html?nodeId=GCC6XV9DX58VW5YW},
+    urldate = {2021-07-31},
+    year = {2021},
 }
